After user edits a slug, changes to the library name input no longer affects the slug; Do not squash dashes in the slug; do not update slug for library name change on existing libraries. https://app.asana.com/0/15523651812135/18355508515843

--- a/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
@@ -121,10 +121,10 @@
 
     .manage-lib-slug-input
       border-bottom: 1px dotted #c7c7c7
-      width: 70px
+      width: 75px
       placeholder secondaryTextGray
 
-      &.slug-edited
+      &.non-empty-slug
         border-bottom: none
         width: 275px
 
